2003-07-15  Jim Meyering  <jim@meyering.net>

	* makepath.c (make_path): Enclose diagnostic in _(...).

2003-07-14  Paul Eggert  <eggert@twinsun.com>

	* asnprintf.c, asprintf.c, config.charset, gettext.h,
	localcharset.c, localcharset.h, mkdtemp.c, printf-args.c,
	printf-args.h, printf-parse.c, printf-parse.h, ref-add.sin,
	ref-del.sin, setenv.c, unsetenv.c, vasnprintf.c, vasnprintf.h,
	vasprintf.c, vasprintf.h: Regenerate.  These files are now being
	updated automatically by ../config/srclist-update.  This changes
	their license from LPGL to GPL.

2003-07-14  Jim Meyering  <jim@meyering.net>

	Don't emit diagnostics.  Let callers do that.
	* save-cwd.c: Don't include "error.h".
	(save_cwd): Don't call error.  Ensure that errno is valid
	when returning nonzero.

	* save-cwd.h (restore_cwd): Update prototype.
	* save-cwd.c (restore_cwd): Remove two parameters.
	Simplify.  Don't call error upon failure.  Let callers do that.
	(save_cwd): Mention that Irix 5.3 has the same problem as SunOS4
	when auditing is enabled.  But don't bother updating the #if.

2003-07-14  Simon Josefsson  <jas@extundo.com>

	* mempcpy.h: New file.
	* mempcpy.c: New file.

2003-07-14  Paul Eggert  <eggert@twinsun.com>

	* ceill.c, expl.c, floorl.c, frexpl.c, ldexpl.c, mathl.h,
	sincosl.c, sqrtl.c, trigl.c, trigl.h, poll.c, poll_.h, mkstemp.c,
	unicodeio.c, unicodeio.h, unlocked-io.h:
	Switch from LGPL to GPL.

2003-07-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* obstack.h (__INT_TO_PTR): Revert change of 2003-03-13;
	it breaks C++ compilation.
	[!__GNUC__ || !__STDC__] (obstack_finish): Cast result to void*.

2003-07-10  Jim Meyering  <jim@meyering.net>

	* vasnprintf.c: Remove trailing blanks.
	Make cpp indentation consistent.

2003-07-09  Paul Eggert  <eggert@twinsun.com>

	* alloca_.h, euidaccess.c, getpass.c, memrchr.c, obstack.h,
	posixver.c, strftime.c, strnlen.c, strverscmp.c:
	Switch from LGPL to GPL.

2003-07-07  Paul Eggert  <eggert@twinsun.com>
